--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Web Scraper</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-  </head>
-  <body>
-    <h1>Web Scraper</h1>
-    <form>
-      <label for="url">URL:</label>
-      <input type="text" id="url" name="url"><br><br>
-      <label for="selector">Selector:</label>
-      <input type="text" id="selector" name="selector"><br><br>
-      <label for="attribute">Attribute:</label>
-      <input type="text" id="attribute" name="attribute"><br><br>
-      <button type="button" onclick="scrape()">Scrape</button>
-    </form>
-    <div id="results"></div>
-    <script>
-      function scrape() {
-        var url = document.getElementById("url").value;
-        var selector = document.getElementById("selector").value;
-        var attribute = document.getElementById("attribute").value;
-        // Aquí puedes agregar el código para realizar el scraping
-        // y mostrar los resultados en la sección de resultados
-      }
-    </script>
-  </body>
+<head>
+    <title>Titulares de noticias</title>
+</head>
+<body>
+    <h1>Titulares de noticias</h1>
+    {% for headline in headlines %}
+        <h3>{{ headline.text }}</h3>
+    {% endfor %}
+</body>
 </html>
